-
Bug
-
Resolution: Done
-
Not Evaluated
-
4.7.0
-
None
-
f595c880cf68225d300547d31f13cf9520be3846
Error:
"graphicsitems/qmlgraphicsflickable.cpp", line 165: Error: Could not find a match for QmlTimeLineEvent::timeLineEvent<QmlTimeLineEvent::T, QmlTimeLineEvent::method>(QmlTimeLineValueProxy<QmlGraphicsFlickablePrivate>*, QmlGraphicsFlickablePrivate*) needed in QmlGraphicsFlickablePrivate::QmlGraphicsFlickablePrivate(). graphicsitems/qmlgraphicsflickable.cpp", line 166: Error: Could not find a match for QmlTimeLineEvent::timeLineEvent<QmlTimeLineEvent::T, QmlTimeLineEvent::method>(QmlTimeLineValueProxy<QmlGraphicsFlickablePrivate>*, QmlGraphicsFlickablePrivate*) needed in QmlGraphicsFlickablePrivate::QmlGraphicsFlickablePrivate().
This is probably caused by the template expansion failed, leading to the template functions being discarded.
Template function being called is:
template<class T, void (T::*method)()> static QmlTimeLineEvent timeLineEvent(QmlTimeLineObject *b, T *c) { QmlTimeLineEvent rv; rv.d0 = &callFunc<T, method>; rv.d1 = (void *)c; rv.d2 = b; return rv; } template <class T, void (T::*method)()> static void callFunc(void *c) { T *cls = (T *)c; (cls->*method)(); }