Fix compile error on Solaris

QTBUG-8267.  Remove templating from QmlTimeLineEvent class (and rename
it to QmlTimeLineCallback to more represent what it is).